RbA Build/src/objects/Payment__c.object
<CustomObject>
    <description>The object used to store payment records</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>In Pivotal -- Account number is populated based on the type they pick - read from Store Table</description>
        <inlineHelpText>In Pivotal -- Account number is populated based on the type they pick - read from Store Table</inlineHelpText>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Area to enter more details about the payment.</description>
        <inlineHelpText>Area to enter more details about the payment.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <description>What is this number?</description>
        <inlineHelpText>What is this number?</inlineHelpText>
        <label>Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The payment record is related to this order.</description>
        <inlineHelpText>The payment record is related to this order.</inlineHelpText>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <description>The amount paid.</description>
        <inlineHelpText>The amount paid.</inlineHelpText>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <description>The date this payment was received.</description>
        <inlineHelpText>The date this payment was received.</inlineHelpText>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <description>The payment was made using this method. Current pivotal picklist values are: Cash, Check, Renewal Rewards, NSF Check, C/O Adjustment, Debit on Account, Marketing Discount, Credit Card - Visa/MasterCard, Credit Card - Discover, Credit Card - American Express, Write-Off, Install Adjustment, Customer Refund - CC, Customer Refund - Check, Permit Refunds, Install Refunds, Install Materials, Miscellaneous Receipts, Credit Card - Diners Club, Uniform Reimbursement, Service Revenue, ACH, Bond Refund</description>
        <inlineHelpText>The payment was made using this method. Current pivotal picklist values are: Cash, Check, Renewal Rewards, NSF Check, C/O Adjustment, Debit on Account, Marketing Discount, Credit Card - Visa/MasterCard, Credit Card - Discover, Credit Card - American Expre</inlineHelpText>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <description>The type of payment. What would make sense here? Things like Permit Refunds, Install Materials, etc?</description>
        <inlineHelpText>The type of payment. What would make sense here? Things like Permit Refunds, Install Materials, etc?</inlineHelpText>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Payment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Processed_Date__c</fullName>
        <description>The date the payment was processed.</description>
        <inlineHelpText>The date the payment was processed.</inlineHelpText>
        <label>Processed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Store_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The store location where this payment was received.</description>
        <inlineHelpText>The store location where this payment was received.</inlineHelpText>
        <label>Store Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Payment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Order__c</columns>
        <columns>Payment_Date__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>Store_Location__c</columns>
        <columns>Payment_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{00000000}</displayFormat>
        <label>Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <recordTypes>
        <fullName>Deposit</fullName>
        <active>true</active>
        <description>Deposit record type</description>
        <label>Deposit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Misc_Sub_Payment</fullName>
        <active>true</active>
        <description>The record type for miscellaneous sub-payments not associated with an order.</description>
        <label>Misc Sub-Payment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>